--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-streamlit
-haystack-ai
-pinecone-haystack
-google-api-python-client
-grpcio
-pypdf
-markdown-it-py 
+streamlit==1.41
+haystack-ai==2.9
+pinecone-haystack==4.0
+google-api-python-client==2.163
+grpcio==1.70
+pypdf==5.3
+markdown-it-py==3.0
+python-docx==1.1.2
+sentence-transformers==3.4
+python-dotenv==1.0
 mdit_plain
-python-docx
-sentence-transformers
-python-dotenv
